fix: buttons overlapping

--- a/src/components/CustomForm/customForm.module.scss
+++ b/src/components/CustomForm/customForm.module.scss
@@ -8,6 +8,7 @@
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
+	height: max-content;
 
 	&-item {
 		padding: 0 2%;
